--- a/Python/Python Study Notes/19. Modules.md
+++ b/Python/Python Study Notes/19. Modules.md
@@ -949,3 +949,79 @@ from .spam import name
 
 means “from a module named `spam` located in the same package as the file that contains this statement, import the variable `name`.”
 
+in 3.X’s model, a statement of the following form will always find a `string` module somewhere on sys.path, instead of a module of the same name in the package:
+
+```
+import string		# Skip this package's version
+```
+
+By contrast, without the from `__future__` statement in 2.X, if there’s a local string module in the package, it will be imported instead.
+
+**Notice that leading dots can be used to force relative imports only with the `from` statement, not with the `import` statement.** 
+
+**In Python 3.X, the `import modname` statement is always absolute-only, skipping the containing package’s directory.** 
+
+**In 2.X, this statement form still performs relative imports, searching the package’s directory first. `from` statements without leading dots behave the same as `import` statements—absolute-only in 3.X (skipping the package directory), and relative-then-absolute in 2.X (searching the package directory first).**
+
+Within a module file located in a package directory named `mypkg`, the following alternative import forms work as described:
+
+```
+from .string import name1, name2 		# Imports names from mypkg.string
+from . import string 					# Imports mypkg.string
+from .. import string					# Imports string sibling of mypkg
+```
+
+#### Why Relative Imports?
+
+this feature is designed in part to allow scripts to resolve ambiguities that can arise when a same-named file appears in multiple places on the module search path. Consider the following package directory:
+
+```
+mypkg\
+	__init__.py 
+	main.py 
+	string.py
+```
+
+#### The relative imports solution in 3.X
+
+an `import` statement of the following form in our example file mypkg/main.py will always find a `string` module outside the package, via an absolute import search of `sys.path`:
+
+```
+import string		# Imports string outside package (absolute)
+```
+
+A `from` import without leading-dot syntax is considered absolute as well:
+
+```
+from string import name		# Imports name from string outside package
+```
+
+relative imports are still possible if you use the dot syntax in the `from` statement:
+
+```
+from . import string		# Imports mypkg.string here (relative)
+```
+
+ statement  refers to the `string` module relative to the current package. If this code appears in our `mypkg.main` module, for example, it will import `name1` and `name2` from `mypkg.string`.
+
+```
+from .string import name1, name2		# Imports names from mypkg.string
+```
+
+the “.” in a relative import is taken to stand for the package directory containing the file in which the import appears. An additional leading dot performs the relative import starting from the parent of the current package.
+
+```
+from .. import spam		# Imports a sibling of mypkg
+```
+
+code located in some module A.B.C can use any of these forms:
+
+```python
+from . import D 		# Imports A.B.D (. means A.B)
+from .. import E 		# Imports A.E (.. means A)
+from .D import X 		# Imports A.B.D.X (. means A.B)
+from ..E import X		# Imports A.E.X (.. means A)
+```
+
+#### Relative imports versus absolute package paths
+
