--- a/Python/Python Study Notes/20. Class.md
+++ b/Python/Python Study Notes/20. Class.md
@@ -670,6 +670,260 @@ the `self` argument must always be explicit in Python methods. the explicit `sel
 
 ## A More Realistic Example
 
+Python’s syntax rules, any arguments in a function’s header after the first default must all have defaults
+
+What we really want to do here is employ a software design concept known as encap-sulation—wrapping up operation logic behind interfaces, such that each operation is coded only once in our program. That way, if our needs change in the future, there is just one copy to update. Moreover, we’re free to change the single copy’s internals almost arbitrarily, without breaking the code that uses it.
+
+methods are simply normal functions that are attached to classes and designed to process instances of those classes. The instance is the subject of the method call and is passed to the method’s self argument automatically.
+
+```python
+class Person:
+    def __init__(self, name, job=None, pay=0):      # Constructor takes three arguments
+        self.name = name                            # Fill out fields when created
+        self.job = job                              # self is the new instance object
+        self.pay = pay
+
+    # Add methods to encapsulate operations for maintainability
+    def lastName(self):                             # Behavior methods
+        return self.name.split()[-1]                # self is implied subject
+    def giveRaise(self, percent):
+        self.pay = int(self.pay * (1 + percent))    # Must change here only
+
+
+if __name__ == '__main__':                           # When run for testing only
+    # self-test code
+    bob = Person('Bob Smith')
+    sue = Person('Sue Jone', job='dev', pay=100000)
+    print(bob.name, bob.pay)
+    print(sue.name, sue.pay)
+    print(bob.name.split()[-1])         # Extract object's last name
+    sue.giveRaise(.10)                    # Give this object a raise
+    print(sue.pay)
+```
+
+`__str__` is preferred by print and str, and `__repr__` is used as a fallback for these roles and in all other contexts.
+
+`__repr__` allow us to tap into specific operations and provide specialized behavior when our objects are used in those contexts.
+
+```python
+class Person:
+    def __init__(self, name, job=None, pay=0):      # Constructor takes three arguments
+        self.name = name                            # Fill out fields when created
+        self.job = job                              # self is the new instance object
+        self.pay = pay
+
+    # Add methods to encapsulate operations for maintainability
+    def lastName(self):                             # Behavior methods
+        return self.name.split()[-1]                # self is implied subject
+    def giveRaise(self, percent):
+        self.pay = int(self.pay * (1 + percent))    # Must change here only
+
+    # Add __repr__ overload method for printing objects
+    def __repr__(self):                              # Added method
+        return '[Person: %s, %s]' % (self.name, self.pay)       # String to print
+
+
+if __name__ == '__main__':                           # When run for testing only
+    # self-test code
+    bob = Person('Bob Smith')
+    sue = Person('Sue Jone', job='dev', pay=100000)
+    print(bob)
+    print(sue)
+    print(bob.lastName(), sue.lastName())         # Extract object's last name
+    sue.giveRaise(.10)                    # Give this object a raise
+    print(sue)
+```
+
+Customizing Behavior by Subclassing
+
+```python
+class Person:
+    def __init__(self, name, job=None, pay=0):      # Constructor takes three arguments
+        self.name = name                            # Fill out fields when created
+        self.job = job                              # self is the new instance object
+        self.pay = pay
+
+    # Add methods to encapsulate operations for maintainability
+    def lastName(self):                             # Behavior methods
+        return self.name.split()[-1]                # self is implied subject
+    def giveRaise(self, percent):
+        self.pay = int(self.pay * (1 + percent))    # Must change here only
+
+    # Add __repr__ overload method for printing objects
+    def __repr__(self):                              # Added method
+        return '[Person: %s, %s]' % (self.name, self.pay)       # String to print
+        
+# Add customization of one behavior in a subclass
+class Manager(Person):
+    def giveRaise(self, percent, bonus=.10):         # Redefine at this level
+        Person.giveRaise(self, percent + bonus)     # Call Person's version
+
+
+if __name__ == '__main__':                           # When run for testing only
+    # self-test code
+    bob = Person('Bob Smith')
+    sue = Person('Sue Jone', job='dev', pay=100000)
+    print(bob)
+    print(sue)
+    print(bob.lastName(), sue.lastName())         # Extract object's last name
+    sue.giveRaise(.10)                    # Give this object a raise
+    print(sue)
+
+    tom = Manager('Tom Jones', 'mgr', 5000)         # Make a Manager: __init__
+    tom.giveRaise(.10)                              # Runs custom version
+    print(tom.lastName())                           # Runs inherited method
+    print(tom)                                      # Runs inherited __repr__
+```
+
+Polymorphism in Action
+
+```python
+class Person:
+    def __init__(self, name, job=None, pay=0):      # Constructor takes three arguments
+        self.name = name                            # Fill out fields when created
+        self.job = job                              # self is the new instance object
+        self.pay = pay
+
+    # Add methods to encapsulate operations for maintainability
+    def lastName(self):                             # Behavior methods
+        return self.name.split()[-1]                # self is implied subject
+    def giveRaise(self, percent):
+        self.pay = int(self.pay * (1 + percent))    # Must change here only
+
+    # Add __repr__ overload method for printing objects
+    def __repr__(self):                              # Added method
+        return '[Person: %s, %s]' % (self.name, self.pay)       # String to print
+
+# Add customization of one behavior in a subclass
+class Manager(Person):
+    def giveRaise(self, percent, bonus=.10):         # Redefine at this level
+        Person.giveRaise(self, percent + bonus)     # Call Person's version
+
+
+if __name__ == '__main__':                           # When run for testing only
+    # self-test code
+    bob = Person('Bob Smith')
+    sue = Person('Sue Jone', job='dev', pay=100000)
+    print(bob)
+    print(sue)
+    print(bob.lastName(), sue.lastName())         # Extract object's last name
+    sue.giveRaise(.10)                    # Give this object a raise
+    print(sue)
+
+    tom = Manager('Tom Jones', 'mgr', 5000)         # Make a Manager: __init__
+    tom.giveRaise(.10)                              # Runs custom version
+    print(tom.lastName())                           # Runs inherited method
+    print(tom)                                      # Runs inherited __repr__
+
+    print('--All there--')
+    for obj in (bob, sue, tom):
+        obj.giveRaise(.10)
+        print(obj)
+```
+
+Inherit, Customize, and Extend
+
+```
+class Person:
+	def lastName(self): ... 
+	def giveRaise(self): ... 
+	def __repr__(self): ...
+
+class Manager(Person):					# Inherit
+	def giveRaise(self, ...): ...		# Customize
+	def someThingElse(self, ...): ...	# Extend
+
+tom = Manager() 
+tom.lastName() 				# Inherited verbatim
+tom.giveRaise() 			# Customized version
+tom.someThingElse() 		# Extension here
+print(tom)					# Inherited overload method
+```
+
+Customizing Constructors
+
+```python
+class Person:
+    def __init__(self, name, job=None, pay=0):      # Constructor takes three arguments
+        self.name = name                            # Fill out fields when created
+        self.job = job                              # self is the new instance object
+        self.pay = pay
+
+    # Add methods to encapsulate operations for maintainability
+    def lastName(self):                             # Behavior methods
+        return self.name.split()[-1]                # self is implied subject
+    def giveRaise(self, percent):
+        self.pay = int(self.pay * (1 + percent))    # Must change here only
+
+    # Add __repr__ overload method for printing objects
+    def __repr__(self):                              # Added method
+        return '[Person: %s, %s]' % (self.name, self.pay)       # String to print
+
+# Add customization of one behavior in a subclass
+class Manager(Person):
+
+    # Add customization of constructor in a subclass
+    def __init__(self, name, pay):                   # Redefine constructor
+        Person.__init__(self, name, 'mgr', pay)     # Run original with 'mgr'
+    def giveRaise(self, percent, bonus=.10):         # Redefine at this level
+        Person.giveRaise(self, percent + bonus)     # Call Person's version
+
+
+if __name__ == '__main__':                           # When run for testing only
+    # self-test code
+    bob = Person('Bob Smith')
+    sue = Person('Sue Jone', job='dev', pay=100000)
+    print(bob)
+    print(sue)
+    print(bob.lastName(), sue.lastName())         # Extract object's last name
+    sue.giveRaise(.10)                    # Give this object a raise
+    print(sue)
+
+    tom = Manager('Tom Jones', 5000)         # Job name not needed:
+    tom.giveRaise(.10)                       # Implied/set by class
+    print(tom.lastName())
+    print(tom)
+```
+
+- Instance creation—filling out instance attributes
+
+
+- Behavior methods—encapsulating logic in a class’s methods
+
+
+
+- Operator overloading—providing behavior for built-in operations like printing
+
+
+
+- Customizing behavior—redefining methods in subclasses to specialize them
+
+
+
+- Customizing constructors—adding initialization logic to superclass steps
+
+
+
+Other Ways to Combine Classes
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
