--- a/Python/Python Study Notes/20. Class.md
+++ b/Python/Python Study Notes/20. Class.md
@@ -903,26 +903,315 @@ if __name__ == '__main__':                           # When run for testing only
 - Customizing constructors—adding initialization logic to superclass steps
 
 
+#### Other Ways to Combine Classes
 
-Other Ways to Combine Classes
+a common coding pattern involves nesting objects inside each other to build up composites.
+
+the `giveRaise` method here still achieves customization, by changing the argument passed along to the embedded object. In effect, `Manager` becomes a controller layer that passes calls down to the embedded object, rather than up to superclass methods:
+
+```
+# File person-composite.py 
+# Embedding-based Manager alternative 
+class Person:
+	...same...
+
+class Manager:
+	def __init__(self, name, pay):
+		self.person = Person(name, 'mgr', pay) 		# Embed a Person object
+	def giveRaise(self, percent, bonus=.10):
+		self.person.giveRaise(percent + bonus) 		# Intercept and delegate
+	def __getattr__(self, attr):
+		return getattr(self.person, attr) 			# Delegate all other attrs
+	def __repr__(self):
+		return str(self.person)						# Must overload again (in 3.X)
+
+if __name__ == '__main__':
+	...same...
+```
+
+> The more important point here is that this `Manager` alternative is representative of a general coding pattern usually known as delegation—a composite-based structure that manages a wrapped object and propagates method calls to it.
+>
+
+**Still, object embedding, and design patterns based upon it, can be a very good fit when embedded objects require more limited interaction with the container than direct customization implies.**
+
+```
+# File person-department.py 
+# Aggregate embedded objects into a composite
+
+class Person:
+	...same...
+
+class Manager(Person):
+	...same...
+
+class Department:
+	def __init__(self, *args):
+		self.members = list(args) 
+	def addMember(self, person):
+		self.members.append(person) 
+	def giveRaises(self, percent):
+		for person in self.members:
+			person.giveRaise(percent) 
+	def showAll(self):
+		for person in self.members:
+			print(person)
+
+if __name__ == '__main__':
+	bob = Person('Bob Smith') 
+	sue = Person('Sue Jones', job='dev', pay=100000) 
+	tom = Manager('Tom Jones', 50000)
+
+	development = Department(bob, sue) 			# Embed objects in a composite
+	development.addMember(tom) 
+	development.giveRaises(.10) 				# Runs embedded objects' giveRaise
+	development.showAll()						 # Runs embedded objects' __repr__
+```
+
+#### Special Class Attributes
+
+- The built-in `instance.__class__` attribute provides a link from an instance to the class from which it was created. Classes in turn have a `__name__`, just like modules, and a `__bases__` sequence that provides access to superclasses. We can use these here to print the name of the class from which an instance is made rather than one we’ve hardcoded.
 
 
 
+- The built-in `object.__dict__` attribute provides a dictionary with one key/value pair for every attribute attached to a namespace object (including modules, classes, and instances). Because it is a dictionary, we can fetch its keys list, index by key, iterate over its keys, and so on, to process all attributes generically.
+
+
+```python
+>>> from person import Person
+>>> bob = Person('Bob Smith')
+>>> bob								# Show bob's __repr__ (not __str__)
+[Person: Bob Smith, 0]
+>>> print(bob)						# Ditto: print => __str__ or __repr__
+[Person: Bob Smith, 0]
+>>> 
+>>> bob.__class__					# Show bob's class and its name
+<class 'person.Person'>
+>>> bob.__class__.__name__
+'Person'
+>>> 
+>>> list(bob.__dict__.keys())		# Attributes are really dict keys
+['name', 'pay', 'job']				# Use list to force list in 3.X
+>>> 
+>>> for key in bob.__dict__:
+...     print(key, '=>', bob.__dict__[key])		# Index manually
+... 
+name => Bob Smith
+pay => 0
+job => None
+>>> for key in bob.__dict__:
+...     print(key, '=>', getattr(bob, key))		# obj.attr, but attr is a var
+... 
+name => Bob Smith
+pay => 0
+job => None
+```
+
+#### A Generic Display Tool
+
+```python
+# File classtools.py (new) 
+"Assorted class utilities and tools"
+
+class AttrDisplay:
+
+  """ 
+  Provides an inheritable display overload method that shows instances with their class names and a name=value pair for each attribute stored on the instance itself (but not attrs inherited from its classes). Can be mixed into any class, and will work on any instance.
+  """ 
+
+  def gatherAttrs(self):
+      attrs = []
+      for key in sorted(self.__dict__):
+          attrs.append('%s=%s' % (key, getattr(self, key)))
+      return ', '.join(attrs)
+
+  def __repr__(self):
+      return '[%s: %s]' % (self.__class__.__name__, self.gatherAttrs())
+
+if __name__ == '__main__':
+
+	class TopTest(AttrDisplay):
+		count = 0 
+		def __init__(self):
+			self.attr1 = TopTest.count 
+			self.attr2 = TopTest.count+1 
+			TopTest.count += 2
+			
+	class SubTest(TopTest):
+		pass
+	X, Y = TopTest(), SubTest() 		# Make two instances
+	print(X) 							# Show all instance attrs
+	print(Y)							# Show lowest class name
+```
+
+#### Instance Versus Class Attributes
+
+```
+>>> from person import Person		# 2.X: keys is list, dir shows less
+>>> bob = Person('Bob Smith')
+>>> bob.__dict__.keys() 			# Instance attrs only
+['pay', 'job', 'name']
+>>> dir(bob) 						# Plus inherited attrs in classes 
+['__doc__', '__init__', '__module__', '__repr__', 'giveRaise', 'job', 'lastName', 'name', 'pay']
+
+>>> list(bob.__dict__.keys()) 		# 3.X keys is a view, not a list
+['name', 'job', 'pay']
+>>> dir(bob) 						# 3.X includes class type methods 
+['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', 
+...more omitted: 31 attrs...
+'__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'giveRaise', 'job', 'lastName', 'name', 'pay']
+
+>>> len(dir(bob)) 
+31
+>>> list(name for name in dir(bob) if not name.startswith('__')) 
+['giveRaise', 'job', 'lastName', 'name', 'pay']
+```
+
+#### Name Considerations in Tool Classes
+
+To minimize the chances of name collisions like this, Python programmers often prefix methods not meant for external use with a single underscore: `_gatherAttrs` in our case.
+
+A better and less commonly used solution would be to use two underscores at the front of the method name only: `__gatherAttrs` for us. Python automatically expands such names to include the enclosing class’s name, which makes them truly unique when looked up by the inheritance search. This is a feature usually called pseudoprivate class attributes
+
+#### Our Classes’ Final Form
+
+We now have a two-module system that not only implements our original design goals for representing people, but also provides a general attribute display tool we can use in other programs in the future.
+
+```python
+# File classtools.py (new) 
+...as listed earlier...
+```
+
+```python
+# File person.py (final)
+""" 
+Record and process information about people. Run this file directly to test its classes. 
+"""
+from classtools import AttrDisplay          # Use generic display tool
+
+class Person:                               # Mix in a repr at this level
+    """ 
+    Create and process person records 
+    """
+    def __init__(self, name, job=None, pay=0):      # Constructor takes three arguments
+        self.name = name                            # Fill out fields when created
+        self.job = job                              # self is the new instance object
+        self.pay = pay
+
+    # Add methods to encapsulate operations for maintainability
+    def lastName(self):                             # Behavior methods, Assumes last is last
+        return self.name.split()[-1]                # self is implied subject
+
+    def giveRaise(self, percent):                   # Percent must be 0..1
+        self.pay = int(self.pay * (1 + percent))    # Must change here only
 
 
 
+# Add customization of one behavior in a subclass
+class Manager(Person):
+    """ 
+    A customized Person with special requirements 
+    """
+
+    # Add customization of constructor in a subclass
+    def __init__(self, name, pay):                   # Redefine constructor
+        Person.__init__(self, name, 'mgr', pay)     # Run original with 'mgr'   Job name is implied
+
+    def giveRaise(self, percent, bonus=.10):         # Redefine at this level
+        Person.giveRaise(self, percent + bonus)     # Call Person's version
+
+
+if __name__ == '__main__':                           # When run for testing only
+    # self-test code
+    bob = Person('Bob Smith')
+    sue = Person('Sue Jone', job='dev', pay=100000)
+    print(bob)
+    print(sue)
+    print(bob.lastName(), sue.lastName())         # Extract object's last name
+    sue.giveRaise(.10)                    # Give this object a raise
+    print(sue)
+
+    tom = Manager('Tom Jones', 5000)         # Job name not needed:
+    tom.giveRaise(.10)                       # Implied/set by class
+    print(tom.lastName())
+    print(tom)
+```
+
+#### (Final): Storing Objects in a Database
+
+It turns out that it’s easy to make instance objects more permanent, with a Python feature called **object persistence**—making objects live on after the program that creates them exits.
+
+##### Pickles and Shelves
+
+Object persistence is implemented by three standard library modules, available in every Python:
+
+**pickle** 
+
+> Serializes arbitrary Python objects to and from a string of bytes 
+
+**dbm (named anydbm in Python 2.X)**
+
+> Implements an access-by-key filesystem for storing strings
+
+**shelve**
+
+> Uses the other two modules to store Python objects on a file by key
 
 
 
+##### The pickle module
+
+The pickle module is a sort of super-general object formatting and deformatting tool: given a nearly arbitrary Python object in memory, it’s clever enough to convert the object to a string of bytes, which it can use later to reconstruct the original object in memory. The pickle module can handle almost any object you can create—lists, dic-tionaries, nested combinations thereof, and class instances. The latter are especially useful things to pickle, because they provide both data (attributes) and behavior (meth-ods); in fact, the combination is roughly equivalent to “records” and “programs.” Because `pickle` is so general, it can replace extra code you might otherwise write to create and parse custom text file representations for your objects. By storing an object’s pickle string on a file, you effectively make it permanent and persistent: simply load and un-pickle it later to re-create the original object.
+
+##### The shelve module
+
+Although it’s easy to use `pickle` by itself to store objects in simple flat files and load them from there later, the shelve module provides an extra layer of structure that allows you to store pickled objects by key. shelve translates an object to its pickled string with pickle and stores that string under a key in a `dbm` file; when later loading, shelve fetches the pickled string by key and re-creates the original object in memory with pickle. This is all quite a trick, but to your script a shelve 2 of pickled objects looks just like a dictionary—you index by key to fetch, assign to keys to store, and use dictionary tools such as `len`, in, and `dict.keys` to get information. Shelves automatically map dictionary operations to objects stored in a file.
+
+In fact, to your script the only coding difference between a shelve and a normal dictionary is that you must open shelves initially and must close them after making changes. The net effect is that a shelve provides a simple database for storing and fetching native Python objects by keys, and thus makes them persistent across program runs. It does not support query tools such as SQL, and it lacks some advanced features found in enterprise-level databases (such as true transaction processing), but native Python objects stored on a shelve may be processed with the full power of the Python language once they are fetched back by key.
+
+##### Storing Objects on a Shelve Database
+
+there are two ways to load a class from a file
+
+> ```
+> import person 					# Load class with import
+> bob = person.Person(...)		# Go through module name
+>
+> from person import Person 		# Load class with from
+> bob = Person(...)				# Use name directly
+> ```
+
+we’re not printing anything, just creating and storing objects in a file-based database:
+
+```python
+# File makedb.py: store Person objects on a shelve database
+
+from person import Person, Manager 					# Load our classes
+bob = Person('Bob Smith') 							# Re-create objects to be stored
+sue = Person('Sue Jones', job='dev', pay=100000) 
+tom = Manager('Tom Jones', 50000)
+
+import shelve 
+db = shelve.open('persondb') 						# Filename where objects are stored
+for obj in (bob, sue, tom):							# Use object's name attr as key
+	db[obj.name] = obj 								# Store object on shelve by key
+db.close()											# Close after making changes
+```
+
+in a shelve, the key can be any string. The only rule is that the keys must be strings and should be unique, since we can store just one object per key, though that object can be a list, dictionary, or other object containing many objects itself.
+
+##### Exploring Shelves Interactively
+
+there are one or more real files in the current directory whose names all start with “persondb”.
+
+The actual files created can vary per platform, and just as in the built-in open function, the filename in `shelve.open()` is relative to the current working
+
+Wherever they are stored, these files implement a keyed-access file that contains the pickled representation of our three Python objects.
+
+Because shelves are Python objects containing Python objects, we can process them with normal Python syntax and development modes. Here, the interactive prompt effectively becomes a database client:
 
 
 
-
-
-
-
-
-
+##### Updating Objects on a Shelve
 
 
 
