--- a/Python/Python Study Notes/16. Functions 函数.md
+++ b/Python/Python Study Notes/16. Functions 函数.md
@@ -3050,3 +3050,35 @@ def fact_iter(num, product):
 
 
 
+## 函数式编程
+
+### 返回函数
+
+函数作为返回值
+
+```python
+def lazy_sum(*args):
+    def sum():
+        ax = 0
+        for n in args:
+            ax = ax + n
+        return ax
+    return sum
+```
+
+> ```python
+> >>> f = lazy_sum(1, 3, 5, 7, 9)
+> >>> f
+> <function lazy_sum.<locals>.sum at 0x101c6ed90>
+> >>> f()
+> 25
+> ```
+
+当我们调用`lazy_sum()`时，每次调用都会返回一个新的函数，即使传入相同的参数, `f1()`和`f2()`的调用结果互不影响。
+
+```python
+>>> f1 = lazy_sum(1, 3, 5, 7, 9)
+>>> f2 = lazy_sum(1, 3, 5, 7, 9)
+>>> f1==f2
+False
+```
