--- a/-Knowledge-/Language/大家的日本语.md
+++ b/-Knowledge-/Language/大家的日本语.md
@@ -1,5 +1,120 @@
 # 大家的日本语
 
+
+
+### 【标日】第一课産地
+
+【词汇】
+
+```
+中国人 {ちゅうごくじん}：中国人	[名]
+日本人：日本人		[名]
+：韩国人	[名]
+：美国人	[名]
+：法国人	[名]
+：(大)学生	[名]
+：老师		[名]
+：留学生	[名]
+：教授		[名]
+：职员		[名]
+会社員{かいしゃいん}：公司职员	[名]
+：店员		[名]
+：进修生	[名]
+：企业		[名]
+：大学		[名]
+：(我)父亲		[名]
+
+
+
+わたし（私）：我	[第一人称代词]
+あなた：你		[第二人称代词]
+〜さん		[加在他人姓名后面表示敬意的称呼]
+〜ちゃん	[称呼小孩，或年轻人间表示关系亲密时]
+〜君{くん}		[对与自己年龄相近，或比自己年轻的男性]
+いしゃ(医者):医生
+学生{がくせい}：学生
+会社員{かいしゃいん}：公司职员
+```
+
+##### 1. 名词句：
+
+**【名词】は【名词】です**
+
+> ”〜は〜です” 相当于汉语的 ”〜是〜”
+>
+> 句式具有主题解说的构造形式
+
+”は” 是助词，表示主题，用来提示主题。は前面的为主题，读作”わ”
+
+”〜です” 是谓语部分，是对 ”〜は” 这一主题的解释。
+
+です：是(肯定)
+
+わたし（私）：我
+
+
+
+##### 2. 名词句的否定式：
+
+**【名词】は【名词】では　ありません**
+
+> ”〜不是〜”
+
+では　ありません：不是(否定)【正式】
+
+じゃ　ありません：不是(否定)【口语】
+
+
+
+##### 3. 名词句的疑问形式及问答：
+
+**【名词】は【名词】ですか**
+
+> 疑问句形式使用陈述句后面加「か」来表示疑问句，一般情况下不使用问号。
+>
+> 表示：~ 是 ~ 吗？
+
+> 疑问句的回答除正面回答外，还可以只用：
+>
+> ```
+> 是的：
+> １．はい
+> ２．はい、そうです。
+> 不是：
+> １．いいえ
+> ２．いいえ、ちがいます
+> 不知道：
+> 分{わ}かりません
+> ```
+
+【例句】
+
+あなた　は　小野｛おの｝さん　ですか。		（您是小野女士吗？）
+
+はい、小野{おの}　です		（是的，我是小野）
+
+キムさん　は　中国人｛ちゅうごくじん｝　ですか。		（金女士是中国人吗？）
+
+いいえ、 中国人{ちゅうごくじん}では　ありません。　		（不，不是中国人）
+
+分かりません	　（不知道）
+
+
+
+
+
+##### 4. 连接名词，表示事物从属关系的助词 の 的用法：
+
+【名词】 の 【名词】
+
+> 后面的名词从属于前面的名词。
+
+わたしの父{ちち}			（我的父亲）
+
+
+
+### 【大家】第一课
+
 1. わたし　は　マイク・ミラー　です。
 
    > 我是マイク・ミラー
@@ -11,7 +126,7 @@
 です：是(肯定)
 ```
 
-2. サントスさん　は　学生　じゃありません
+2. サントスさん　は　学生　じゃ　ありません
 
    > サントス先生不是学生
 
