--- a/-Knowledge-/Language/大家的日本语.md
+++ b/-Knowledge-/Language/大家的日本语.md
@@ -1,42 +1,127 @@
-# 大家的日本语
+# 【标日】＋【大家】
 
 
 
-### 【标日】第一课産地
+### 第一课
 
-【词汇】
+##### 【词汇】
 
 ```
-中国人 {ちゅうごくじん}：中国人	[名]
-日本人：日本人		[名]
-：韩国人	[名]
-：美国人	[名]
-：法国人	[名]
-：(大)学生	[名]
-：老师		[名]
-：留学生	[名]
-：教授		[名]
-：职员		[名]
-会社員{かいしゃいん}：公司职员	[名]
-：店员		[名]
-：进修生	[名]
-：企业		[名]
-：大学		[名]
-：(我)父亲		[名]
+ちゅうごくじん（中国人） 〔名〕 中国人
+にほんじん（日本人） 〔名〕 日本人
+かんこくじん（韓国人） 〔名〕 韩国人
+アメリカじん（～人） 〔名〕 美国人
+フランスじん（～人） 〔名〕 法国人
 
+学童（がくどう）　「名」　小学生
+小学生（しょうがくせい）　④③　「名」小学生
+中学生（ちゅうがくせい）　④③　「名」中学生
+高校生（こうこうせい）　　③　　「名」高中生
+生徒（せいと）　　　　　　①　　「名」（初、高中）学生
+大学生（だいがくせい）　　④③　「名」大学生
+大学院生（だいがくいんせい）　⑤「名」研究生
+がくせい（学生） 〔名〕 （大）学生
+りゅうがくせい（留学生） 〔名〕 留学生
+けんしゅうせい（研修生） 〔名〕 进修生
+せんせい（先生） 〔名〕 老师
+きょうじゅ（教授） 〔名〕 教授
+だいがく（大学） 〔名〕 大学
 
+しゃいん（社員） 〔名〕 职员
+かいしゃいん（会社員） 〔名〕 公司职员
+てんいん（店員） 〔名〕 店员
+きぎょう（企業） 〔名〕 企业
+かちょう（課長） 〔名〕 科长
+しゃちょう（社長） 〔名〕 总经理，社长
 
-わたし（私）：我	[第一人称代词]
-あなた：你		[第二人称代词]
-〜さん		[加在他人姓名后面表示敬意的称呼]
+ちち（父） 〔名〕 （我）父亲
+でむかえ（出迎え） 〔名〕 迎接
+あのひと（あの人） 〔代〕 那个人
+わたし（私） 〔代〕 我
+あなた 〔代〕 你
+どうも 〔副〕 非常，很
+はい 〔叹〕 哎， 是（应答）；是的
+いいえ 〔叹〕 不， 不是
+あっ 〔叹〕 哎， 哎呀
+
+り（李） 〔专〕 李
+おう（王） 〔专〕 王
+ちょう（張） 〔专〕 张
+もり（森） 〔专〕 森
+はやし（林） 〔专〕 林
+おの（小野） 〔专〕 小野
+よしだ（吉田） 〔专〕 吉田
+たなか（田中） 〔专〕 田中	
+なかむら（中村） 〔专〕 中村
+たろう（太郎） 〔专〕 太郎
+キム（金） 〔专〕 金
+デュポン 〔专〕 迪蓬
+スミス 〔专〕 史密斯
+ジョンソン 〔专〕 约翰逊
+
+ちゅうごく（中国） 〔专〕 中国
+とうきょうだいがく（東京大学） 〔专〕 东京大学
+ペキンだいがく（北京大学） 〔专〕 北京大学
+ジェーシーきかく（ＪＣ企画）〔专〕JC 策划公司
+ペキンりょこうしゃ（北京旅行社）〔专〕 北京旅行社
+にっちゅうしょうじ（日中商事）〔专〕 日中商社
+------------------------------------------------------------
+
+こんにちは 你好
+すみません 对不起， 请问
+どうぞ 请
+よろしく おねがいします（～お願いします）请多关照
+はじめまして 初次见面
+こちらこそ 我才要（请您～）
+そうてす 是（这样）
+ちがいます 不是
+わかりません（分かりません） 不知道
+どうもすみません 实在对不起
+
+〜様	[正式场合称呼他人的尊称，多用于信函等书面语，可男女通用，比さん的尊敬程度更多]
+〜さん		[加在他人姓名后面表示敬意的称呼；女性可译成女士或不译，男性可译成先生或不译]
 〜ちゃん	[称呼小孩，或年轻人间表示关系亲密时]
 〜君{くん}		[对与自己年龄相近，或比自己年轻的男性]
 いしゃ(医者):医生
-学生{がくせい}：学生
-会社員{かいしゃいん}：公司职员
 ```
 
-##### 1. 名词句：
+##### 【词义辨析】
+
+```
+「人」作为结尾词时有时读「じん」、有时读「にん」。当接在名词、地名后时读「じん」。
+如：
+知识人（ちしきじん） 知识分子
+普通人（ふつうじん） 普通人；一般人
+西洋人（せいようじん）　 西方人；欧美人
+
+当接在动词性名词或数词后时读「にん」。
+如：
+怪我人（けがにん）　 受伤的人
+三人（さんにん） 三个人
+
+------------------------------------------------------------
+「社员」与「会社员」
+「会社员」表示一种职业，意思是“公司职员”“在公司工作的人”，所以在介绍某人的职业或者填写履历时应使用「会社员」。而「社员」则表示具体所属，一般在所属的公司明确的句子中使用。
+如：
+彼はうちの社员です。（他是我们公司的职员）
+
+------------------------------------------------------------
+「わたし」と「わたくし」「ぼく」「あたし」
+「わたし」是由「わたくし」变化而来的。在现代日语中「わたし」被视为最标准的第一人称代词，使用率很高。
+「わたくし」的语气比「わたし」更郑重。
+在口语中，男孩子多使用「ぼく」、而女孩子则喜欢用「あたし」。日语中第一人称代词往往被省略。
+
+------------------------------------------------------------
+「あなた」と「君」「お前」
+「あなた」一般用于同辈之间、长辈对晚辈、上司对下属、妻子对丈夫等的称呼。晚辈对长辈、下属对赏析不使用。女性对丈夫以外的成年男性更不宜使用，否则会被误会为夫妻或情人关系。「君」一般为男性对同辈或晚辈的称呼。而「お前」只能用于指称比自己地位低或者比自己年龄小的人，并含有轻视的语气，要注意使用范围。
+
+------------------------------------------------------------
+「はい」并不都是表示肯定回答。很多场合是用来表示应答。在表示应答时，除了「はい」以外，还有「ええ」「うん」等。但它们的正式程度不及「はい」。「はい」的连用「はいはい」可以表示“行了，不要唠叨了”的意思。
+```
+
+
+
+##### 1. 名词句<肯定句>
 
 **【名词】は【名词】です**
 
@@ -52,9 +137,13 @@
 
 わたし（私）：我
 
+【例句】
+
+李さんは中国人です	小李是中国人
 
 
-##### 2. 名词句的否定式：
+
+##### 2. 名词句的否定式
 
 **【名词】は【名词】では　ありません**
 
@@ -63,6 +152,10 @@
 では　ありません：不是(否定)【正式】
 
 じゃ　ありません：不是(否定)【口语】
+
+【例句】
+
+森さんは学生じゃありません		(森先生不是学生)
 
 
 
@@ -99,60 +192,303 @@
 
 分かりません	　（不知道）
 
-
-
-
+   
 
 ##### 4. 连接名词，表示事物从属关系的助词 の 的用法：
 
 【名词】 の 【名词】
 
 > 后面的名词从属于前面的名词。
+>
+> ```
+> の:的。
+> ```
 
 わたしの父{ちち}			（我的父亲）
 
 
 
-### 【大家】第一课
+##### 5. ＜も＞
 
-1. わたし　は　マイク・ミラー　です。
+私は会社員です。李さんも会社員です。	我是公司职员，李先生也是公司职员
+も：也。(は的位置换成も)
 
-   > 我是マイク・ミラー
 
-```
-わたし（私）：我
-マイク・ミラー：【外国人名】
-は -> 助词，表示主题。は前面的为主题
-です：是(肯定)
-```
 
-2. サントスさん　は　学生　じゃ　ありません
-
-   > サントス先生不是学生
+##### 6. ＜〜ね；〜よ＞
 
 ```
-サントス：【外国人名】
-さん：先生
-いしゃ(医者):医生
-学生{がくせい}：学生
-じゃありません：不是(否定)【口语】
-ではありません：不是(否定)【正式】
+〜ね：助词，放在句尾
+1.表示同意
+2.要求同意
+3. 再确认
+このラーメン美味しいですね。	这个拉面很好吃(表示同意)
+あなたは日本人ですね。	你是日本人。(再确认)
+
+〜よ：助词，放在句尾，表示提醒
+このラーメンおいしいですよ。	这个拉面很好吃哦~
+
+美味しい（おいしい）：美味的，好吃的。
 ```
 
-3. ミラーさん　は 会社員　ですか。
 
-   > ミラー先生是公司职员吗。
 
-```
-か：表示疑问
-会社員{かいしゃいん}：公司职员
-```
 
-4. サントスさん　も　会社員　です
 
-   > サントス先生也是公司职员。
+### 第二课 
+
+##### 【词汇】
 
 ```
-も：也
+円（えん）：日元
+ほん（本） 〔名〕 书	
+かばん 〔名〕 包， 公文包
+ノート 〔名〕 笔记本， 本子
+えんぴつ（鉛筆） 〔名〕 铅笔
+かさ（傘） 〔名〕伞
+くつ（靴） 〔名〕鞋
+しんぶん（新聞） 〔名〕 报纸
+ざっし（雑誌） 〔名〕 杂志
+じしょ（辞書） 〔名〕 词典
+カメラ 〔名〕 照相机
+テレビ 〔名〕 电视机
+パソコン 〔名〕 个人电脑
+ラジオ 〔名〕 收音机
+でんわ（電話） 〔名〕 电话
+つくえ（机） 〔名〕 桌子， 书桌
+いす 〔名〕 椅子
+かぎ 〔名〕 钥匙，锁
+とけい（時計） 〔名〕 钟， 表
+てちょう（手帳） 〔名〕 记事本
+しゃしん（写真） 〔名〕 照片
+くるま（車） 〔名〕 车
+じてんしゃ（自転車） 〔名〕 自行车
+おみやげ（お土産） 〔名〕 礼物
+めいさんひん（名産品） 〔名〕 特产， 名产
+シルク 〔名〕 丝绸
+ハンカチ 〔名〕 手绢
+かいしゃ（会社） 〔名〕 公司
+かた（方） 〔名〕 （敬称）位， 人
+ひと（人） 〔名〕 人
+かぞく（家族） 〔名〕 家人，家属
+はは（母） 〔名〕 （我）母亲
+おかあさん（お母さん） 〔名〕 母亲
+にほんご（日本語） 〔名〕 日语
+ちゅうごくご（中国語） 〔名〕 汉语， 中文
+これ 〔代〕 这， 这个
+それ 〔代〕 那， 那个
+あれ 〔代〕 那， 那个
+どれ 〔疑〕 哪个
+
+なん（何） 〔疑〕 什么,不知道什么事物时使用。
+だれ(誰) 〔疑,代〕 谁，用于自己同辈或地位相当的人	，不知道什么人时使用。
+どなた 〔疑〕 哪位，用于对方是尊长或不了解身份的人。
+
+
+さい（歳）：岁，年岁，年龄
+この 〔连体〕 这， 这个
+その 〔连体〕 那， 那个
+あの 〔连体〕 那， 那个
+どの 〔连体〕 哪个
+えっ 〔叹〕 啊
+わあ 〔叹〕 哇
+ええ 〔叹〕 （应答）嗯，是
+ながしま（長島） 〔专〕 长岛
+にほん（日本） 〔专〕 日本
+スワトウ 〔专〕 汕头
+ロンドン 〔专〕 伦敦
+------------------------------------------------------------
+ありがとうございます 谢谢
+おいくつ 多大
+なん
+さい
+何～∕～歳	
+こちらこそ：[惯用语]理应是说话方
 ```
+
+【词汇例句】
+
+森さんは　だれ　ですか。		森先生是谁？
+
+森さんは　どなた　ですか。	森先生是谁？（更礼貌）
+
+その　かばんは　だれのですか。	那个包是谁的？(だれのかばん省略了かばん)
+
+わたしのです。	是我的
+
+
+
+##### 【词义辨析】
+
+```
+方（かた）：位，人。对长辈、上司等应该尊敬的对象，或初次见面的人或交往不多的人，使用礼貌用语。
+あの　方は　田中さんです。	那位是田中先生。(礼貌语)
+あの　人　田中さんです。	那个人是田中先生。
+
+------------------------------------------------------------
+何歳ですか		多大了？
+おいくつですか		多大年纪了？(礼貌语)
+直接询问孩子年龄时用 “いくつ？“ 或 “何歳”。
+
+------------------------------------------------------------
+どうぞ：用于给对方物品，或劝对方进餐。（口语说法）
+
+[例句]
+これは　本です。どうぞ。（这是书。请收下。）
+どうも　ありがとうございます。（太感谢了）
+
+口语说法：
+これ、どうぞ。
+完整说法：
+これを　差し上げます。（さしあげます）	(这个送给您)
+どうぞ　受け取ってください。（うけとってください）(请您收下)
+
+------------------------------------------------------------
+えつ：
+1. 对对方所说的话感到意外或吃惊时使用。
+あの　方は　田中先生です。　(那位是田中老师)
+えっ。　(啊？)[音调上升]
+2.用于没听懂或没明白对方所说的话时的反问。但是注意，不可以对年长者或上司使用；重复使用会使人觉得不礼貌。
+甲：わたしは　中国人です。　(我是中国人。)
+乙：えっ？ (什么？[音调上升])
+
+------------------------------------------------------------
+わあ：感动或吃惊时发出的声音
+
+------------------------------------------------------------
+はい 和 ええ
+”ええ”是”はい”比较随便的说法，但只用于肯定对方的提问。在别人叫到自己的名字而应答时必须用”はい”而不能用”ええ”。
+森さん。（森先生）
+はい。 (哎)
+
+------------------------------------------------------------
+どうも　ありがとうございます。
+”どうも”用于加强”ありがとうございます”所表示的谢意。
+在略示谢意时，可省略“ありがとうございます”，只用”どうぞ”
+
+```
+
+
+
+##### 1. 指示代名词
+
+＜これ；それ；あれ；この；その；あの＞
+
+```
+指东西：
+======================================================================
+[近自己]:	
+これ[单独用，指东西] | ここ[指地方] こちら(此方) [指地方，礼貌] | この＋名词
+
+[近对方]:	
+それ[单独用，指东西]	|　そこ[指地方] そちら(其方) [指地方，礼貌] ｜その＋名词
+
+[远方]:	 
+あれ[单独用，指东西] |　あそこ[指地方] あちら(彼方)[指地方，礼貌]　｜ あの＋名词
+
+[疑问]：
+どれ[哪个，指东西]　｜　どこ[哪里，指地方]　どちら[指地方，礼貌]　｜どの＋名词
+
+これ｜それ｜あれ｜どれ：代词，可单独使用，指事物
+どれ：三个以上不确定是哪个时。
+この｜その｜あの｜どの：修饰名词时起指示作用的连体词，本身不能作为句子成分单独使用。
+
+その　かばんは　いくらですか。	那个书包是多少钱？
+その　かばんは　１円です。	那本书1日元。
+----------------------------------------------------------------------
+森さんの　かばんは　どれですか。	森先生的包是哪一个？
+森さんの　机は　どの机ですか。		森先生的桌子是哪个桌子？
+```
+
+   ＜これ＞（单独用，后接は）
+
+> これ　は　本　です
+>
+> 这是书
+
+   ＜それ＞
+
+> それ　は　私の本　です
+>
+> 那是我的书
+
+   ＜この＞（后接名词）
+
+> この本　は　私の　です
+>
+> 这本书是我的
+
+＜ここ＞
+
+> トイレ　は　どこ　ですか。
+>
+> トイレ　は　ここ　です。
+>
+> 洗手间在哪里？
+>
+> 洗手间在这里。
+
+はい、そうです。こちらです（礼貌用语）
+
+> 是的。是这样。在这边
+
+```
+トイレ：洗手间
+どこ：[代] 哪里
+ここ：[代] 这里
+こちら（此方）：[代] 这里，这边，这方面，这位，我们(礼貌用语)
+```
+
+それ　は　何　ですか。
+
+> 那是什么？
+
+```
+なん(何)：[代] 什么
+```
+
+
+
+
+
+
+
+##### 2. ”何”和”だれ”
+
+```
+なん（何） 〔疑〕 什么,不知道什么事物时使用。
+だれ(誰) 〔疑,代〕 谁，用于自己同辈或地位相当的人	，不知道什么人时使用。
+どなた 〔疑〕 哪位，用于对方是尊长或不了解身份的人。
+
+1.森さんは　だれ　ですか。
+2.森さんは　どなた　ですか。	森先生是哪一位？(2比1更礼貌)
+
+その　かばんは　だれのですか。	（这个包是谁的？）
+その　かばんは　だれのかばんですか。	[完整说法]
+わたしのです(我的)[省略说法]
+```
+
+
+
+### 第三课
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
