--- a/-Knowledge-/Language/日语输入.md
+++ b/-Knowledge-/Language/日语输入.md
@@ -4,8 +4,6 @@
 
 
 
-
-
 # 五十音图
 
 日语为表音文字
@@ -88,12 +86,6 @@
 片：部分、不完整
 
 平假名取自汉字的草书，片假名取自汉字的一部分
-
-
-
-
-
-
 
 
 
@@ -200,8 +192,40 @@
 2. 一个单词的声调中，或没有下降，或只有一处下降。
 
 
-
 　
+
+### 特殊读音
+
+#### か
+
+か的罗马注音是ka，が这个假名是か的浊化，罗马注音是ga。这两个假名读音在不同场景中会发生变化。
+
+1. 放在词头的时候读原有的音。
+2. 而放在词中词尾的时候ka变成ga音，而ga变成带鼻音的nga音。
+
+【例】
+
+かかる的读音是kagaru,而不是kakaru。
+
+これが何ですか这个句子中が和か的读音分别是nga和ga。
+
+
+
+#### は
+
+は的罗马注音是ha。
+
+修饰主语时读音为wa
+
+
+
+#### へ
+
+へ罗马注音是he
+
+【例】地平線（ちへいせん）
+
+作为副词时读音为e
 
 
 
@@ -547,7 +571,7 @@ b) Macintosh HD/Users/你的用户名/Library/Dictionaries文件夹
 ```
 
 
-# 词语读法
+# 词语
 
 ### 常用中国姓氏
 
@@ -697,7 +721,7 @@ Z z ゼット
 
 ```
 零 零 れい ①型 
-0    ゼロ ①型 
+0    ゼロ ①型 ぜろ
 一 1 一 いち ②型 
 二 2 二 に ①型 
 三 3 三 さん 0型 
@@ -726,8 +750,8 @@ Z z ゼット
 六十 60 六十 ろくじゅう 
 七十 70 七十 ななじゅう/しちじゅう 
 八十 80 八十 はちじゅう 
-九十 90 九十 きゅうじゅう （
-一）百 100 百 ひゃく
+九十 90 九十 きゅうじゅう 
+一百 100 百 ひゃく
 一百零一 101 百一 ひゃくいち 
 一百一十九 119 百十九 ひゃくじゅうきゅう 
 二百 200 二百 にひゃく 
@@ -781,6 +805,9 @@ Z z ゼット
 八千 八千 はっせん 
 九千 九千 きゅうせん 
 一万 一万 いちまん
+
+0.1  れいてんいち		点
+２/３ さんぶんのに	分母+分+の+分子
 ```
 
 ### 量词
@@ -858,47 +885,15 @@ Z z ゼット
 二十一日 （にじゅういちにち） 
 二十二日 （にじゅうににち） 
 二十三日 （にじゅうさんにち）
-二十四日 
-二十五日 
-二十六日 
-二十七日 
-二十八日 
-二十九日 
-三十日 
-三十一日 
-何日
-
-
-
- 
-（にじゅうよんにち）/(にじゅうよっか) 
-（にじゅうごにち） 
-（にじゅうろくにち） 
-（にじゅうななにち） 
-（にじゅうはちにち） 
-（にじゅうきゅうにち）
-
-（さんじゅうにち/みそか） 
-（さんじゅういちにち） 
- (なんにち)/几日，几号
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+二十四日 （にじゅうよんにち）/(にじゅうよっか) 
+二十五日 （にじゅうごにち） 
+二十六日 （にじゅうろくにち） 
+二十七日 （にじゅうななにち）
+二十八日 （にじゅうはちにち） 
+二十九日 （にじゅうきゅうにち）
+三十日   （さんじゅうにち/みそか） 
+三十一日 （さんじゅういちにち） 
+何日     (なんにち)/几日，几号
 ```
 
 
@@ -906,7 +901,19 @@ Z z ゼット
 ### 月份
 
 ```
-一月 （いちがつ）
+一月 （いちがつ）	一ヵ月	（いっかげつ）
+二月 （にがつ） 	 ニヵ月 （にかげつ）
+三月 （さんがつ）    三ヵ月（さんかげつ）
+四月 （よんがつ）    四ヵ月（よんかげつ）
+五月 （ごがつ）     五ヵ月（ごかげつ）
+六月 （ろくがつ）   六ヵ月（ろっかげつ）
+七月 （しちがつ）   七ヵ月（ななかげつ）
+八月 （はちがつ）   八ヵ月（はっかげつ）
+九月 （くがつ）    九ヵ月（きゅうかげつ）
+十月 （じゅうがつ） 	十ヵ月 （じっかげつ）
+十一月 （じゅういちがつ） 	十一ヵ月 （じゅういっかげつ）
+十二月 （じゅうにがつ） 	十ニヵ月 （じゅうにかげつ）
+何月 （なんがつ）/几月	何ヵ月 （なんかげつ）/几个月
 ```
 
 
@@ -981,6 +988,35 @@ Z z ゼット
 
 
 
+### 亲属的称谓
+
+```
+汉语称谓			自己的亲属		别人的亲属
+------------------------------------------------------------
+祖父/外公			そふ(祖父)		　おじいさん
+祖母/外婆			そぼ(祖母)		　おばあさん
+双亲				りょうしん(両親)	　ご両親
+父亲				  ちち(父)			お父さん
+母亲				 はは(母)			お母さん
+儿子				むすこ(息子)		　　息子さん
+女儿				むすめ(娘)			娘さん/お嬢さん（おじょうさん）
+兄弟/姐妹	　　	兄弟（きょうだい）	　ご兄弟
+哥哥				　兄（あに）		　　お兄さん（おにいさん）
+姐姐				姉（あね）			お姉さん（おねえさん）
+弟弟			　	弟（おとうと）	　	弟さん（おとうとさん）
+妹妹				妹（いもうと）		　妹さん（いもうとさん）
+伯伯/叔叔/舅舅/姑父		おじ			おじさん
+伯母/婶婶/阿姨/姑姑		おば			おばさん
+```
+
+说话人称呼他人亲属时用敬语，在称谓前加”お〜”、”ご〜”。在称谓之后加“さん”。以示尊敬。称呼自己亲属时不需要。
+
+直接称呼自己的亲属时，如：”お父さん”、”パパ”等有多种多样的称谓。但称呼弟弟或妹妹等晚辈时，一般直呼其姓名。
+
+
+
+
+
 # 语法术语名称
 
 ```
@@ -1032,3 +1068,12 @@ Z z ゼット
    没有词尾变化——助词
 
 说明：独立词在句子里具有独立的概念，在句子里具有独立的能力。而 附属词没有独立的概念，在句子里不能单独存在，只能附在独立词的后面 起一定的语法作用。
+
+
+
+# 语法
+
+
+
+## 判断句
+
